Refactor imports and clean up code formatting across multiple files